--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'production'
-VUE_APP_URL = 'http://192.168.1.198:80/tender/'
+VUE_APP_URL = 'http://www.gxxmglzx.com/tender/'
 # base api
 VUE_APP_BASE_API = '/prod-api'
 
