--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 VUE_APP_URL = 'http://www.gxxmglzx.com/tender/'
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = ''
 
